Bug 79079 - NodeRenderingContext should have ShadowRootList instead of ShadowRoot.
Summary: NodeRenderingContext should have ShadowRootList instead of ShadowRoot.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: DOM (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Shinya Kawanaka
URL:
Keywords:
Depends on: 79071
Blocks:
  Show dependency treegraph
 
Reported: 2012-02-20 22:06 PST by Shinya Kawanaka
Modified: 2012-02-23 21:43 PST (History)
6 users (show)

See Also:


Attachments
Patch (4.43 KB, patch)
2012-02-23 04:09 PST, Shinya Kawanaka
no flags Details | Formatted Diff | Diff
Patch (4.47 KB, patch)
2012-02-23 20:04 PST, Shinya Kawanaka
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Shinya Kawanaka 2012-02-20 22:06:22 PST
Actually NodeRenderingContext does not need ShadowRoot. It should have ShadowRootList.
Comment 1 Shinya Kawanaka 2012-02-23 04:09:41 PST
Created attachment 128454 [details]
Patch
Comment 2 Dimitri Glazkov (Google) 2012-02-23 09:08:43 PST
Comment on attachment 128454 [details]
Patch

makes sense. Please make sure to run by EWS before landing. The patch doesn't seem to apply.
Comment 3 Shinya Kawanaka 2012-02-23 18:30:30 PST
(In reply to comment #2)
> (From update of attachment 128454 [details])
> makes sense. Please make sure to run by EWS before landing. The patch doesn't seem to apply.

Ah, Sorry. This patch should be apply-able after Bug 79071 is resolved.
Comment 4 Shinya Kawanaka 2012-02-23 20:04:41 PST
Created attachment 128637 [details]
Patch
Comment 5 Shinya Kawanaka 2012-02-23 21:43:00 PST
Committed r108728: <http://trac.webkit.org/changeset/108728>