NodeRenderingContext should have ShadowRootList instead of ShadowRoot. https://bugs.webkit.org/show_bug.cgi?id=79079

Reviewed by Dimitri Glazkov.

Apparently NodeRenderingContext should have ShadowRootList instead of ShadowRoot.
This patch changes it.

No new tests. Simple refactoring.

* dom/NodeRenderingContext.cpp:
(WebCore::NodeRenderingContext::NodeRenderingContext):
(WebCore::NodeRenderingContext::hostChildrenChanged):
(WebCore::NodeRenderingContext::shouldCreateRenderer):
* dom/NodeRenderingContext.h:
(WebCore):

Canonical link: https://commits.webkit.org/96504@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108728 268f45cc-cd09-0410-ab3c-d52691b4dbfc